feature: add media query for mobile devices. make buttons and icons interactive

--- a/Modal 1/index.html
+++ b/Modal 1/index.html
@@ -12,20 +12,23 @@
 </head>
 
 <body>
+
     <section class="main-container">
         <div class="modal-container">
+
             <div class="modal-icons_cont">
                 <i class="fas fa-arrow-left"></i> <i class="fas fa-times"></i>
             </div>
+
             <div class="modal-content_cont">
                 <h2>Create a post</h2>
                 <p>Share posts across multiple social channels to increase the reach of your brand and track how engage
                     with your Content</p>
                 <h3>Campaign Name</h3>
-                <input type="text" value="" placeholder="Ex. Get 50% off">
-
+                <input type="text" value="" placeholder="Ex. Get 50% off" required>
                 <a href="" class="btn btn-continue">Continue</a> <a href="" class="btn btn-cancel">Cancel</a>
             </div>
+
         </div>
 
 
