--- a/Modal 1/index.html
+++ b/Modal 1/index.html
@@ -23,8 +23,7 @@
             <div class="modal-content_cont">
                 <h2>Create a post</h2>
                 <p>Share posts across multiple social channels to increase the reach of your brand and track how people
-                    engage
-                    with your Content</p>
+                    engage with your Content</p>
                 <h3>Campaign Name</h3>
                 <input type="text" value="" placeholder="Ex. Get 50% off" required>
                 <a href="" class="btn btn-continue">Continue</a> <a href="" class="btn btn-cancel">Cancel</a>
