add page contents

--- a/Missed Call Modal/index.html
+++ b/Missed Call Modal/index.html
@@ -7,9 +7,38 @@
     <title>Missed Call Modal</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+<section class="main-container">
+    <div class="modal-container">
+        <div class="top-icons_cont">
+            <h3> <img class="missed-icon"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:eco/v1587681491/missed-call_szxqyg.png">
+                Missed call</h3><i class="fas fa-times round-wrapper"></i>
+        </div>
+        <div class="modal-content">
+            <div class="img-container">
+                <span class="image-wrapper">
+                    <img class="caller-image"
+                        src="https://res.cloudinary.com/dvhndpbun/image/upload/w_100,h_100/q_auto:eco,r_max/v1587683008/round-image.png"
+                        alt="caller image">
+                </span>
+            </div>
+            <div class="text-container">
+                <p class="info-text">You missed a call from</p>
+                <p class="caller-name">Frederick Floyd</p>
+                <p class="call-time">22 hours ago</p>
+            </div>
+
+        </div>
+        <div class="btn-container">
+            <a href="" class="btn btn-send"><i class="far fa-comment"></i> Send message</a> <a href=""
+                class="btn btn-call"><i class="fas fa-phone-alt"></i> Call back</a>
+        </div>
+    </div>
+
+</section>
 
 <body>
 
