add page contents

--- a/Dark Footer/index.html
+++ b/Dark Footer/index.html
@@ -7,12 +7,69 @@
     <title>Dark Footer</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <footer>Footer content here</footer>
+    <footer>
+        <div class="logo">
+
+            <p><i class="fas fa-water"></i>Flow ui</p>
+        </div>
+
+        <section class="upper-footer">
+            <ul>
+                <span>ABOUT</span>
+                <li>About</li>
+                <li>Submit an issue</li>
+                <li>GitHub Repo</li>
+                <li>Slack</li>
+            </ul>
+            <ul>
+                <span>GETTING STARTED</span>
+                <li>Introduction</li>
+                <li>Documentation</li>
+                <li>Usage</li>
+                <li>Globals</li>
+                <li>Elements</li>
+                <li>Collections</li>
+                <li>Themes</li>
+            </ul>
+            <ul>
+                <span>RESOURCES</span>
+                <li>API</li>
+                <li>Form Validations</li>
+                <li>Product Visibility</li>
+                <li>Accessibility</li>
+                <li>Community</li>
+                <li>Design Defined</li>
+                <li>Marketplace</li>
+            </ul>
+            <div class="social-media">
+                <span>SOCIAL MEDIA</span>
+                <p>Follow us on social media to find out the latest updates on our progress.</p>
+                <div class="icons-container">
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fab fa-github"></i></a>
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href=""><i class="fab fa-dribbble"></i></a>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section class="lower-footer">
+            <p>© 2020 flow-ui. All rights reserved.</p>
+            <ul class="center-text">
+                <li>Terms of Service</li>
+                <li>Privacy Policy</li>
+                <li>Security</li>
+                <li>Sitemap</li>
+            </ul>
+            <p class="right-text">English <i class="fas fa-caret-down"></i></p>
+
+        </section>
+    </footer>
 </body>
 
 </html>
