feat: add mobile query breakpoints

--- a/Dark Footer/index.html
+++ b/Dark Footer/index.html
@@ -59,14 +59,20 @@
         </section>
         <hr>
         <section class="lower-footer">
-            <p>© 2020 flow-ui. All rights reserved.</p>
+            <ul>
+                <li>© 2020 flow-ui. All rights reserved.</li>
+            </ul>
+
             <ul class="center-text">
                 <li>Terms of Service</li>
                 <li>Privacy Policy</li>
                 <li>Security</li>
                 <li>Sitemap</li>
             </ul>
-            <p class="right-text">English <i class="fas fa-caret-down"></i></p>
+            <ul class="lang">
+                <li>English <i class="fas fa-caret-down"></i></li>
+            </ul>
+
 
         </section>
     </footer>
