adjust footer padding on mobile devices

--- a/Dark Footer/index.html
+++ b/Dark Footer/index.html
@@ -21,39 +21,75 @@
         <section class="upper-footer">
             <ul>
                 <span>ABOUT</span>
-                <li>About</li>
-                <li>Submit an issue</li>
-                <li>GitHub Repo</li>
-                <li>Slack</li>
+                <a href="#">
+                    <li>About</li>
+                </a>
+                <a href="#">
+                    <li>Submit an issue</li>
+                </a>
+                <a href="#">
+                    <li>GitHub Repo</li>
+                </a>
+                <a href="#">
+                    <li>Slack</li>
+                </a>
             </ul>
             <ul>
                 <span>GETTING STARTED</span>
-                <li>Introduction</li>
-                <li>Documentation</li>
-                <li>Usage</li>
-                <li>Globals</li>
-                <li>Elements</li>
-                <li>Collections</li>
-                <li>Themes</li>
+                <a href="#">
+                    <li>Introduction</li>
+                </a>
+                <a href="#">
+                    <li>Documentation</li>
+                </a>
+                <a href="#">
+                    <li>Usage</li>
+                </a>
+                <a href="#">
+                    <li>Globals</li>
+                </a>
+                <a href="#">
+                    <li>Elements</li>
+                </a>
+                <a href="#">
+                    <li>Collections</li>
+                </a>
+                <a href="#">
+                    <li>Themes</li>
+                </a>
             </ul>
             <ul>
                 <span>RESOURCES</span>
-                <li>API</li>
-                <li>Form Validations</li>
-                <li>Product Visibility</li>
-                <li>Accessibility</li>
-                <li>Community</li>
-                <li>Design Defined</li>
-                <li>Marketplace</li>
+                <a href="#">
+                    <li>API</li>
+                </a>
+                <a href="#">
+                    <li>Form Validations</li>
+                </a>
+                <a href="#">
+                    <li>Product Visibility</li>
+                </a>
+                <a href="#">
+                    <li>Accessibility</li>
+                </a>
+                <a href="#">
+                    <li>Community</li>
+                </a>
+                <a href="#">
+                    <li>Design Defined</li>
+                </a>
+                <a href="#">
+                    <li>Marketplace</li>
+                </a>
             </ul>
             <div class="social-media">
                 <span>SOCIAL MEDIA</span>
                 <p>Follow us on social media to find out the latest updates on our progress.</p>
                 <div class="icons-container">
-                    <a href=""><i class="fab fa-twitter"></i></a>
-                    <a href=""><i class="fab fa-github"></i></a>
-                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                    <a href=""><i class="fab fa-dribbble"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-github"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-dribbble"></i></a>
                 </div>
             </div>
         </section>
@@ -64,10 +100,18 @@
             </ul>
 
             <ul class="center-text">
-                <li>Terms of Service</li>
-                <li>Privacy Policy</li>
-                <li>Security</li>
-                <li>Sitemap</li>
+                <a href="#">
+                    <li>Terms of Service</li>
+                </a>
+                <a href="#">
+                    <li>Privacy Policy</li>
+                </a>
+                <a href="#">
+                    <li>Security</li>
+                </a>
+                <a href="#">
+                    <li>Sitemap</li>
+                </a>
             </ul>
             <ul class="lang">
                 <li>English <i class="fas fa-caret-down"></i></li>
