add page content

--- a/Onboarding UI/index.html
+++ b/Onboarding UI/index.html
@@ -7,24 +7,104 @@
     <title>Onboarding UI</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
-
-<section class="main-container">
-    <div class="first-ui ui">
-        1
-    </div>
-    <div class="second-ui ui">
-        2
-    </div>
-    <div class="third-ui ui">
-        3
-    </div>
-</section>
-
-<body>
-
+<main class="main-container">
+    <section class="first-ui ui">
+        <header class="header-cont">
+            <div class="header-content">
+                <img class="header-icon"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:good/v1587899528/tent_pymyix.png"
+                    alt="tent icon">
+            </div>
+        </header>
+        <article>
+            <div class="round-cont_wrapper">
+                <div class="round-cont">
+                    <h3>Find campings near you</h3>
+                </div>
+            </div>
+            <div class="body-text">
+                <p>Outpat mattis suspendisse varius lorem massa. In eget laoreet sollicitudin mi.</p>
+            </div>
+            <div class="slide-indicator_cont">
+                <label for="slide1" class="slide-indicator">
+                    <div></div>
+                </label>
+                <label for="slide2" class="slide-indicator">
+                </label>
+                <label for="slide3" class="slide-indicator">
+                </label>
+            </div>
+            <div class="btn-container">
+                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+            </div>
+        </article>
+    </section>
+    <section class="second-ui ui">
+        <header class="header-cont">
+            <div class="header-content">
+                <img class="header-icon icon-2"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/e_bgremoval/v1587931370/sms_icon_mr98kf.png"
+                    alt="tent icon">
+            </div>
+        </header>
+        <article>
+            <div class="round-cont_wrapper">
+                <div class="round-cont">
+                    <h3>Find campings near you</h3>
+                </div>
+            </div>
+            <div class="body-text">
+                <p>Blandit amet adipiscing sed etiam, a sapien molestie odio viverra quam, vestibulum.</p>
+            </div>
+            <div class="slide-indicator_cont">
+                <label for="slide1" class="slide-indicator">
+                    <div></div>
+                </label>
+                <label for="slide2" class="slide-indicator">
+                </label>
+                <label for="slide3" class="slide-indicator">
+                </label>
+            </div>
+            <div class="btn-container">
+                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+            </div>
+        </article>
+    </section>
+    <section class="third-ui ui">
+        <header class="header-cont">
+            <div class="header-content">
+                <img class="header-icon icon-3"
+                    src="https://res.cloudinary.com/dvhndpbun/image/upload/q_auto:good/v1587931954/location-icon.png"
+                    alt="tent icon">
+            </div>
+        </header>
+        <article>
+            <div class="round-cont_wrapper">
+                <div class="round-cont">
+                    <h3>Find campings near you</h3>
+                </div>
+            </div>
+            <div class="body-text">
+                <p>Felis donec fusce nec amet ipsum etiam, nascetur molestias at fermentum felis felis. </p>
+            </div>
+            <div class="slide-indicator_cont">
+                <label for="slide1" class="slide-indicator">
+                    <div></div>
+                </label>
+                <label for="slide2" class="slide-indicator">
+                </label>
+                <label for="slide3" class="slide-indicator">
+                </label>
+            </div>
+            <div class="btn-container">
+                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+            </div>
+        </article>
+    </section>
+</main>
 </body>
 
 </html>
