feat: add buttons interactivity/hover states

--- a/Onboarding UI/index.html
+++ b/Onboarding UI/index.html
@@ -100,7 +100,7 @@
                 </label>
             </div>
             <div class="btn-container">
-                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+                <a class="btn skip-btn">Skip</a><a class="btn next-btn">Next</a>
             </div>
         </article>
     </section>
