fix: disable button clicks leading to page reload (since buttons leads to nowhere)

--- a/Onboarding UI/index.html
+++ b/Onboarding UI/index.html
@@ -38,7 +38,8 @@
                 </label>
             </div>
             <div class="btn-container">
-                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+                <a href="" class="btn skip-btn" onClick="return false;">Skip</a><a href="" class="btn next-btn"
+                    onClick="return false;">Next</a>
             </div>
         </article>
     </section>
@@ -69,7 +70,8 @@
                 </label>
             </div>
             <div class="btn-container">
-                <a href="" class="btn skip-btn">Skip</a><a href="" class="btn next-btn">Next</a>
+                <a href="" class="btn skip-btn" onClick="return false;">Skip</a><a href="" class="btn next-btn"
+                    onClick="return false;">Next</a>
             </div>
         </article>
     </section>
@@ -100,7 +102,8 @@
                 </label>
             </div>
             <div class="btn-container">
-                <a class="btn skip-btn">Skip</a><a class="btn next-btn">Next</a>
+                <a class="btn skip-btn" onClick="return false;">Skip</a><a class="btn next-btn"
+                    onClick="return false;">Next</a>
             </div>
         </article>
     </section>
