--- a/Neumorphic UI Components/index.html
+++ b/Neumorphic UI Components/index.html
@@ -11,7 +11,80 @@
 
 <body>
     <main class="main-container">
-        <section class="cards-container">cards here</section>
+        <section class="cards-container">
+            <div class="card card-1">
+                <span class="icon-wrapper red-wrapper">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="30px" height="auto" viewBox="0 0 42 33" version="1.1"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                        <g id="credit-card" transform="translate(4.829102 4.829102)">
+                            <g id="credit-card">
+                                <path
+                                    d="M2.90809 0L29.0919 0Q29.2348 0 29.377 0.0140033Q29.5191 0.0280065 29.6592 0.0558781Q29.7994 0.0837498 29.9361 0.125221Q30.0728 0.166693 30.2048 0.221365Q30.3368 0.276037 30.4628 0.343384Q30.5888 0.41073 30.7076 0.490102Q30.8263 0.569474 30.9368 0.660106Q31.0472 0.750739 31.1482 0.85176Q31.2493 0.952781 31.3399 1.06322Q31.4305 1.17365 31.5099 1.29244Q31.5893 1.41123 31.6566 1.53723Q31.724 1.66322 31.7786 1.79521Q31.8333 1.9272 31.8748 2.06392Q31.9162 2.20063 31.9441 2.34075Q31.972 2.48087 31.986 2.62305Q32 2.76523 32 2.90809L32 20.0919Q32 20.2348 31.986 20.377Q31.972 20.5191 31.9441 20.6592Q31.9162 20.7994 31.8748 20.9361Q31.8333 21.0728 31.7786 21.2048Q31.724 21.3368 31.6566 21.4628Q31.5893 21.5888 31.5099 21.7076Q31.4305 21.8263 31.3399 21.9368Q31.2493 22.0472 31.1482 22.1482Q31.0472 22.2493 30.9368 22.3399Q30.8263 22.4305 30.7076 22.5099Q30.5888 22.5893 30.4628 22.6566Q30.3368 22.724 30.2048 22.7786Q30.0728 22.8333 29.9361 22.8748Q29.7994 22.9162 29.6592 22.9441Q29.5191 22.972 29.377 22.986Q29.2348 23 29.0919 23L2.90809 23Q2.76523 23 2.62305 22.986Q2.48087 22.972 2.34075 22.9441Q2.20063 22.9162 2.06392 22.8748Q1.9272 22.8333 1.79521 22.7786Q1.66322 22.724 1.53723 22.6566Q1.41123 22.5893 1.29244 22.5099Q1.17365 22.4305 1.06322 22.3399Q0.952781 22.2493 0.85176 22.1482Q0.750739 22.0472 0.660106 21.9368Q0.569473 21.8263 0.490102 21.7076Q0.41073 21.5888 0.343384 21.4628Q0.276037 21.3368 0.221365 21.2048Q0.166693 21.0728 0.125221 20.9361Q0.0837498 20.7994 0.0558781 20.6592Q0.0280065 20.5191 0.0140033 20.377Q0 20.2348 0 20.0919L0 2.90809Q0 2.76523 0.0140033 2.62305Q0.0280065 2.48087 0.0558781 2.34075Q0.0837498 2.20063 0.125221 2.06392Q0.166693 1.9272 0.221365 1.79521Q0.276037 1.66322 0.343384 1.53723Q0.41073 1.41123 0.490102 1.29244Q0.569474 1.17365 0.660106 1.06322Q0.750739 0.952781 0.85176 0.85176Q0.952781 0.750739 1.06322 0.660106Q1.17365 0.569473 1.29244 0.490102Q1.41123 0.41073 1.53723 0.343384Q1.66322 0.276037 1.79521 0.221365Q1.9272 0.166693 2.06392 0.125221Q2.20063 0.0837498 2.34075 0.0558781Q2.48087 0.0280065 2.62305 0.0140033Q2.76523 0 2.90809 0Z"
+                                    id="Rectangle" fill="none" stroke="#FFFFFF" stroke-width="2.909091"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M0 0.71875L32 0.71875" transform="translate(0 7.90625)" id="Path" fill="none"
+                                    stroke="#FFFFFF" stroke-width="2.909091" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+                <p class="card-text">credit card</p>
+            </div>
+            <div class="card card-2">
+                <span class="icon-wrapper yellow-wrapper">
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="28px" height="auto" viewBox="0 0 35 35" version="1.1"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                        <g id="gift-icon" transform="translate(4.315918 4.315979)">
+                            <g id="gift-icon">
+                                <path d="M20.8 0L20.8 13L0 13L0 0" transform="translate(2.6 13)" id="Path" fill="none"
+                                    stroke="#FFFFFF" stroke-width="2.6" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M0 0L26 0L26 6.5L0 6.5L0 0Z" transform="translate(0 6.5)" id="Rectangle"
+                                    fill="none" stroke="#FFFFFF" stroke-width="2.6" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M0.65 19.5L0.65 0" transform="translate(12.35 6.5)" id="Path" fill="none"
+                                    stroke="#FFFFFF" stroke-width="2.6" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path
+                                    d="M9.1 6.5L3.25 6.5C1.45507 6.5 0 5.04493 0 3.25C0 1.45507 1.45507 0 3.25 0C7.8 -1.15463e-15 9.1 6.5 9.1 6.5Z"
+                                    transform="translate(3.9 1.154632E-15)" id="Path" fill="none" stroke="#FFFFFF"
+                                    stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round" />
+                                <path
+                                    d="M0 6.5L5.85 6.5C7.64493 6.5 9.1 5.04493 9.1 3.25C9.1 1.45507 7.64493 0 5.85 0C1.3 -1.15463e-15 0 6.5 0 6.5Z"
+                                    transform="translate(13 1.154632E-15)" id="Path" fill="none" stroke="#FFFFFF"
+                                    stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round" />
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+                <p class="card-text">Gift cards</p>
+            </div>
+            <div class="card card-3">
+                <span class="icon-wrapper indigo-wrapper">
+                    <?xml version="1.0" encoding="utf-8"?>
+
+                    <?xml version="1.0" encoding="utf-8"?>
+                    <svg width="25px" height="auto" viewBox="0 0 32 35" version="1.1"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                        <g id="shopping-bag-icon" transform="translate(4.315918 4.315979)">
+                            <path
+                                d="M3.83333 0L0 5.2L0 23.4C0 24.8359 1.14416 26 2.55556 26L20.4444 26C21.8558 26 23 24.8359 23 23.4L23 5.2L19.1667 0L3.83333 0Z"
+                                id="Path" fill="none" stroke="#FFFFFF" stroke-width="2.6" stroke-linecap="round"
+                                stroke-linejoin="round" />
+                            <path d="M0 0.65L23 0.65" transform="translate(0 4.55)" id="Path" fill="none"
+                                stroke="#FFFFFF" stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M10.2222 0C10.2222 2.87188 7.9339 5.2 5.11111 5.2C2.28832 5.2 0 2.87188 0 0"
+                                transform="translate(6.388889 10.4)" id="Path" fill="none" stroke="#FFFFFF"
+                                stroke-width="2.6" stroke-linecap="round" stroke-linejoin="round" />
+                        </g>
+                    </svg>
+                </span>
+                <p class="card-text">orders</p>
+            </div>
+        </section>
         <section class="body-text">body text here</section>
         <section class="btn-cont">buttons here</section>
     </main>
