add page contents

--- a/Neumorphic UI Components/index.html
+++ b/Neumorphic UI Components/index.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Neumorphic UI Components</title>
-    <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <main class="main-container">
         <section class="cards-container">
+
             <div class="card card-1">
                 <span class="icon-wrapper red-wrapper">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <svg width="30px" height="auto" viewBox="0 0 42 33" version="1.1"
+                    <svg width="27px" height="auto" viewBox="0 0 42 33" version="1.1"
                         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g id="credit-card" transform="translate(4.829102 4.829102)">
                             <g id="credit-card">
@@ -32,10 +33,10 @@
                 </span>
                 <p class="card-text">credit card</p>
             </div>
+
             <div class="card card-2">
                 <span class="icon-wrapper yellow-wrapper">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <svg width="28px" height="auto" viewBox="0 0 35 35" version="1.1"
+                    <svg width="24px" height="auto" viewBox="0 0 35 35" version="1.1"
                         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g id="gift-icon" transform="translate(4.315918 4.315979)">
                             <g id="gift-icon">
@@ -62,12 +63,10 @@
                 </span>
                 <p class="card-text">Gift cards</p>
             </div>
+
             <div class="card card-3">
                 <span class="icon-wrapper indigo-wrapper">
-                    <?xml version="1.0" encoding="utf-8"?>
-
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <svg width="25px" height="auto" viewBox="0 0 32 35" version="1.1"
+                    <svg width="22px" height="auto" viewBox="0 0 32 35" version="1.1"
                         xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
                         <g id="shopping-bag-icon" transform="translate(4.315918 4.315979)">
                             <path
@@ -85,8 +84,14 @@
                 <p class="card-text">orders</p>
             </div>
         </section>
-        <section class="body-text">body text here</section>
-        <section class="btn-cont">buttons here</section>
+
+        <section class="body-text-cont">
+            <p>Stay on top of your order status, deals,new messages and more. <a href="#">Enable notifications</a></p>
+        </section>
+
+        <section class="btn-cont">
+            <button class="btn continue-btn">Continue</button><button class="btn cancel-btn">Cancel</button>
+        </section>
     </main>
 
 </body>
