add page contents

--- a/Pricing Components/index.html
+++ b/Pricing Components/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Pricing</title>
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,12 +17,29 @@
             </div>
             <div class="left-content">
                 <p>monthly</p>
-                <p>yearly</p>
             </div>
         </header>
         <section class="pricing-cards">
-            <div class="starter-card">card here</div>
-            <div class="professional-card">card here</div>
+            <div class="starter-card">
+                <h3>Starter</h3>
+                <p class="price">$8.99 / month</p>
+                <p class="billed-text">Billed yearly</p>
+                <p class="card-description desc-1">Pretium fusce id velit ut tortor pretium, Sit
+                    amet consectetur adipiseing elit ut.
+                    Condimentum mattis pellentesque id nibh.
+                    Euismod elementum.</p>
+                <a class="btn black-btn" onClick="return false;">Get started</a>
+
+            </div>
+            <div class="professional-card">
+                <h3>Professional</h3>
+                <p class="price">$21.99 / month</p>
+                <p class="billed-text">Billed yearly</p>
+                <p class="card-description desc-2">Duis at consectetur lorem donec massa faucibus. Ac placerat
+                    vestibulum
+                    lectus mauris.</p>
+                <a class="btn white-btn" onClick="return false;">Get started</a>
+            </div>
         </section>
     </main>
 </body>
