--- a/Pricing Components/index.html
+++ b/Pricing Components/index.html
@@ -16,7 +16,12 @@
                 <h2>Choose your plan</h2>
             </div>
             <div class="left-content">
-                <p>monthly</p>
+                <label for="toggle">
+                    <input type="checkbox" id="toggle" name="month-year">
+                    <span class="toggler"></span>
+                    <p class="monthly">Monthly</p>
+                    <p class="yearly">Yearly</p>
+                </label>
             </div>
         </header>
         <section class="pricing-cards">
