--- a/Language Settings Modal/index.html
+++ b/Language Settings Modal/index.html
@@ -4,81 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Language Settings</title>
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="modal-container">
-
-        <span class="upper-text">
-            <h3>Change language</h3>
-            <p class="blue-text">More languages</p>
-        </span>
-
-        <form action="" class="radios">
-            <span>
-                <label for="english">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="english" name="language" value="en"
-                            required="">
-                    </span>
-                    English - EN
-                </label>
+    <main>
+        <div class="modal-container">
+            <span class="upper-text">
+                <h3>Change language</h3>
+                <p class="blue-text">More languages</p>
             </span>
-
-            <span>
-                <label for="spanish">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="spanish" name="language" value="es">
-                    </span>
-                    Español - ES
-                </label>
+            <form action="" class="radios">
+                <span>
+                    <label for="english">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="english" name="language" value="en"
+                                required="">
+                        </span> English - EN </label>
+                </span>
+                <span>
+                    <label for="spanish">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="spanish" name="language" value="es">
+                        </span> Español - ES </label>
+                </span>
+                <span>
+                    <label for="simp-chinese">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="simp-chinese" name="language"
+                                value="zh">
+                        </span> 華华中文 - ZH </label>
+                </span>
+                <span>
+                    <label for="deutsch">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="deutsch" name="language" value="de">
+                        </span> Deutsch - DE </label>
+                </span>
+                <span>
+                    <label for="portugues">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="portugues" name="language" value="pt">
+                        </span> Português - PT </label>
+                </span>
+                <span>
+                    <label for="tra-chinese">
+                        <span class="radio-outline">
+                            <input type="radio" class="custom-control-input" id="tra-chinese" name="language"
+                                value="tr-zh">
+                        </span> 繁體中文 - ZH </label>
+                </span>
+            </form>
+            <hr>
+            <span class="lower-text">
+                <h3>Change Currency</h3>
+                <p class="blue-text">Change</p>
             </span>
-            <span>
-                <label for="simp-chinese">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="simp-chinese" name="language" value="zh">
-                    </span>
-                    華华中文 - ZH
-                </label>
-            </span>
-            <span>
-                <label for="deutsch">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="deutsch" name="language" value="de">
-                    </span>
-                    Deutsch - DE
-                </label>
-            </span>
-            <span>
-                <label for="portugues">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="portugues" name="language" value="pt">
-                    </span>
-                    Português - PT
-                </label>
-            </span>
-            <span>
-                <label for="tra-chinese">
-                    <span class="radio-outline">
-                        <input type="radio" class="custom-control-input" id="tra-chinese" name="language" value="tr-zh">
-                    </span>
-                    繁體中文 - ZH
-                </label>
-            </span>
-
-        </form>
-        <hr>
-
-        <span class="lower-text">
-            <h3>Change Currency</h3>
-            <p class="blue-text">Change</p>
-        </span>
-        <p class="dollar-text">$ - USD - U.S. Dollar</p>
-
-        </span>
-    </div>
+            <p class="dollar-text">$ - USD - U.S. Dollar</p>
+        </div>
+    </main>
 </body>
 
 </html>
