darken border color

--- a/Flight Booking App UI/index.html
+++ b/Flight Booking App UI/index.html
@@ -51,15 +51,15 @@
                     <div id="time"></div>
                     <ul class="status-bar_icons">
                         <li>
-                            <img src="./assets/signal-edit.svg" alt="">
+                            <img src="./assets/signal-edit.svg" alt="cell signal">
                         </li>
                         <li>
-                            <img src="./assets/wifi-black-18dp.svg" alt="">
+                            <img src="./assets/wifi-black-18dp.svg" alt="wifi on">
                         </li>
                         <li>
                             <img class="battery-icon"
                                 src="https://res.cloudinary.com/dvhndpbun/image/upload/v1584276405/ios-battery-full_edit_gdwsvt.svg"
-                                alt="">
+                                alt="battery">
                         </li>
                     </ul>
                 </nav>
