animate dotted curve

--- a/Flight Booking App UI/index.html
+++ b/Flight Booking App UI/index.html
@@ -84,7 +84,6 @@
                                         }
                                     </style>
                                 </defs>
-                                <title>dotted-curve</title>
                                 <path class="cls-1 dotted-curve"
                                     d="M452,372a183.75,183.75,0,0,1,43-49c10.93-8.66,20.2-13.92,31-20,17.68-9.94,39.63-22.3,69-31,11.55-3.42,55.19-15.45,112-8a271.62,271.62,0,0,1,66,17,263.14,263.14,0,0,1,39,20,279.79,279.79,0,0,1,51,41,287.43,287.43,0,0,1,28,33"
                                     transform="translate(-450.93 -260.36)" />
@@ -97,7 +96,7 @@
 
                     <div class="destination-top">
                         <div class="location-left">
-                            <h2>DHK</h2>
+                            <h2 class="dhk">DHK</h2>
                             <p class="text-small">Dhaka, Bangladesh</p>
                         </div>
                         <div class="location-right">
